--- a/Dashboard.html
+++ b/Dashboard.html
@@ -89,7 +89,7 @@
                     
                     <span class="text-gray-600">2 de 3</span>
                     
-                        <a href="" 
+                        <a href="Demo.html" 
                            class="bg-purple-600 text-white py-3 px-6 rounded-lg font-semibold hover:bg-purple-700 transition">
                             Siguiente
                         </a>
